# tap-google-analytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml  doc.yml
documentation/: reference.md  setup_guide.md
tap_google_analytics/: __init__.py  ga_client.py  reports_helper.py
tap_google_analytics/defaults/: default_report_definition.json  metadata_columns_cache.json
tests/: all-streams.json  test_unit.py
