[tool.poetry]
name = "tap-google-analytics"
version = "0.2.0"
description = "Tap for Google Analytics integration"
authors = ["Salih Tuç <salih.tuc@y42.com>"]

[tool.poetry.dependencies]
python = "^3.9"
singer-python = "5.6.1"
google-api-python-client = "1.7.9"
oauth2client = "4.1.3"
backoff = "1.3.2"

[tool.poetry.dev-dependencies]
integrations-testing-framework = {git = "git@github.com:goes-funky/integrations-testing-framework", rev = "66a104d9efe7f9eaccc5e6f8c8d85d5e4e000906"}
pytest = "^7.1.2"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
