[tool.poetry]
name = "tap-google-analytics"
version = "0.2.0"
description = "Tap for Google Analytics integration"
authors = ["Salih Tuç <salih.tuc@y42.com>"]

[tool.poetry.scripts]
tap-google-analytics = "tap_google_analytics:main"

[tool.poetry.dependencies]
python = "^3.9"
singer-python = "5.12.2"
google-api-python-client = "2.65.0"
oauth2client = "4.1.3"
backoff = "1.8.0"

[tool.poetry.dev-dependencies]
integrations-testing-framework = {git = "http://github.com/goes-funky/integrations-testing-framework.git"}
pytest = "^7.1.2"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
